--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,17 +34,20 @@
       body {
         background-color: #0f172a;
         color: #f8fafc;
+        overflow-y: overlay; /* Allows scrollbar to sit on top */
       }
-      /* Custom scrollbar */
+      /* Custom Modern Thin Scrollbar */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
         background: #475569; 
-        border-radius: 4px;
+        border-radius: 10px;
+        border: 1px solid #0f172a; /* Creates padding effect */
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #64748b; 
